--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,8 @@
     <color name="Pink_Sand">#ffa8B6</color>
     <color name="Dark_Sand">#a28089</color>
     <color name="Gray">#a9a8aa</color>
+    <color name="Black">#000000</color>
+    <color name="text_color">#000000</color>
+
 </resources>
 
